  and non-prime-power s
* bug fix to Spattern: For a few cases, an individual weight for a main effect column
  was too large with the old calculation method, e.g. for column 124 with s=5,
  the weight was 4 instead of 3, due to numeric glitches
  (ceiling(log(124+1, base=5)) is 4).
* removed iterators and itertools from imports field of DESCRIPTION

Version 1.3, 03 October 2022

* implemented the stratification pattern that was proposed by Tian and Xu (2022)
  and whose implementation is described in Groemping (2022b)
  (important functions: Spattern and dim_wt_tab;
  important supporting function: contr.Power yields contrasts for factors with
  s^el levels)

Version 1.2, 05 August 2022

* modified function createAB and documentation in SOAs2plus_regular:
  the He, Cheng and Tang (2018) strength 2+ SOAs now
  have orthogonal columns more often, because the columns for matrix B
  are selected from all columns that are not used for A
  (instead of only the columns that were not eligible for A).
  Users who need the previous behavior for reproducing a design
  from earlier package versions can use the argument old.
* sped up the selection of columns for matrix B in case orthogonal
  columns are requested (work directly with coefficient matrix instead
  of using function length3 from package DoE.base)
* added an internal function createAB_fast for
  SOAs2plus_regular: this bypasses orthogonality requests in order
  to obtain a fast solution or to forsake orthogonality in the hope
  of improved space-filling (argument orth)

Version 1.1, 04 June 2022

* added functions guide_SOAs and guide_SOAs_from_OA
  for providing guidance about implemented SOA constructions
* various improvements of documentation, and update of references
* BcolsFromBcolllist: changed vertex attributes to FALSE and TRUE
  instead of 0 and 1, in order to avoid a warning from package igraph
* Bug fix: function OSOAs_hadamard did not work for n=8