@@ -10,6 +10,9 @@ Version 1.4, 10 August 2023
   the weight was 4 instead of 3, due to numeric glitches
   (ceiling(log(124+1, base=5)) is 4).
 * removed iterators and itertools from imports field of DESCRIPTION
+* excluded documentation of internal function levels.no, and added an error
+  message for the unlikely event that someone attempts to call base::levels
+  on an object of class no
 
 Version 1.3, 03 October 2022
 
